# face-emote

./: .$arch_v0.drawio.bkp  .gitignore  Makefile  README.md  arch_v0.drawio  goals.md  main.py  pyproject.toml
data/: load_fer.py
eda/: eda.ipynb
