[project]
name = "face-emote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "mlcroissant>=1.0.22",
    "pip>=25.3",
    "pygraphviz>=1.14",
    "setuptools>=80.9.0",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "cz-conventional-gitmoji>=0.7.0",
]

[tool.commitizen]
name = "cz_gitmoji"
version = "0.1.0"
version_provider = "uv"
tag_format = "v$version"
update_changelog_on_bump = true

[alias]
    cz = "!uv run cz commit"
