[project]
name = "face-emote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "commitizen>=4.10.0",
    "cz-conventional-gitmoji>=0.7.0",
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "mlcroissant>=1.0.22",
    "pip>=25.3",
    "pygraphviz>=1.14",
    "setuptools>=80.9.0",
    "torchvision>=0.24.0",
]

[tool.commitizen]
name = "cz_gitmoji"
version = "0.1.0"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "cz-conventional-gitmoji>=0.7.0",
    "pre-commit>=4.4.0",
]
